fix: [GAMA-453] arabic alignment issue on order details page

--- a/src/component/MyAccountOrderViewItem/MyAccountOrderViewItem.style.scss
+++ b/src/component/MyAccountOrderViewItem/MyAccountOrderViewItem.style.scss
@@ -7,7 +7,7 @@
     font-family: Avenir Next;
     font-size: 12px;
     font-weight: 400;
-    margin-left: 30px;
+    margin: 0 30px;
   }
   .AreaText {
     display: flex;
